# pdf-edotor

./: .gitignore  Dockerfile  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/routers/: canvas_edit.py  elements_add.py  merge.py  ocr.py  password.py  reorder.py  split.py  text_add.py  text_edit.py  watermark.py
frontend/: package-lock.json  package.json  prisma.config.ts  tsconfig.tsbuildinfo
frontend/prisma/: schema.prisma
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/trial-status/: route.ts
frontend/src/app/signin/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/upgrade/: page.tsx
frontend/src/components/: CanvaStyleEditor.tsx  OCREditor.tsx  PDFCanvasTextEditor.tsx  PDFElementsEditor.tsx  PDFTextEditor.tsx  SignOutButton.tsx  TrialBanner.tsx
frontend/src/lib/: auth-client.ts  auth.ts
